-------------------------- aqp 0.99-8.45 (2011-11-10) --------------------------
* added NAMESPACE file for R >= 2.14 compatibility
* stabilized S4 class, working on S4-izing all related functions
* preliminary documentation on the new S4 classes/methods
* logistic power peak (LPP) can now be used to generate synthetic depth functions
* added contributing fraction annotation in panel.depth_function()

-------------------------- aqp 0.99-8.4 (2011-10-04) --------------------------
* minor bug fixes and enhancements in PedonPC function
* S4 interface to soil.slot.multiple()

-------------------------- aqp 0.99-8.2 (2011-09-21) --------------------------
* added S4 class/methods for `SoilProfileCollection`
  - this supercedes the (now removed) S3 `SoilProfileList` classes
  - basic accessors/settors are in place, subject to change
* profile_plot() now uses the `SoilProfileCollection` class
! initSoilProfileList() is no longer supported; see depths() for similar functionality
! expect some tumultous times ahead in the API... should be ironed out by 1.0 release

-------------------------- aqp 0.99-8 (2011-09-14) --------------------------
* soil.slot() will now accept boundaries defining a 'slab' over which aggregates are computed
* soil.slot.multiple() now cleanly wraps soil.slot(), accepting all arguments
  - these two changes make it possible to ask: 
    "what is the wt. mean value of some property within this slab, and among these groups?"
  - soil.slot.multiple() now uses a formula interface: NOTE that this will break existing scripts (sorry)
    
-------------------------- aqp 0.99-7 (2011-09-01) --------------------------
* new functions for getting data out of PedonPC (MS Access) databases [windows only for now]
  - get_site_data_from_pedon_db() : site and pedon aggregate data
  - get_hz_data_from_pedon_db() : horizon level data
  - get_colors_from_pedon_db() : formats and mixes multiple colors / horizon
  + implemented in mix_and_clean_colors()
