@@ -76,5 +76,8 @@ ylab='Depth (cm)', xlab='Base Saturation at pH 7', par.settings=list(superpose.l
 lab.agg.cec_7 <- ddply(ca630$lab, .(pedon_key), 
 .fun=summarise, CEC_7=wtd.mean(bs_7, weights=hzn_bot-hzn_top))
 
+# 6. extract a SPDF with horizon data along a slice at 25 cm
+s.25 <- slice(ca, ~ bs_7 + CEC7 + ex_acid, z=55)
+spplot(s.25, zcol=c('bs_7','CEC7','ex_acid'))
 }
 \keyword{datasets}
