@@ -1,4 +1,6 @@
 -------------------------- aqp 0.99-8.45 (2011-11-10) --------------------------
+* added a 'slice' method for SoilProfileCollection objects
+  - returns selected variables along a depth slice (i.e. no aggregation)
 * added NAMESPACE file for R >= 2.14 compatibility
 * stabilized S4 class, working on S4-izing all related functions
 * preliminary documentation on the new S4 classes/methods
